--- a/{{cookiecutter.repo_name}}/{{cookiecutter.app_name}}/testproject/testapp/templates/base.html
+++ b/{{cookiecutter.repo_name}}/{{cookiecutter.app_name}}/testproject/testapp/templates/base.html
@@ -10,7 +10,7 @@
   </head>
   <body>
 	<div class="container">
-    {% block content %}{% endblock %}
+        {% raw %}{% block content %}{% endblock %}{% endraw %}
 	</div>
     <script type="text/javascript" src="http://codeorigin.jquery.com/jquery-1.10.2.min.js"></script>
     <script type="text/javascript" src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>
